# panel

./: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  autogen.sh  configure.ac.in  panel-desktop-handler.desktop.in  panel-preferences.desktop.in
common/: Makefile.am  panel-dbus.h  panel-debug.c  panel-debug.h  panel-private.h  panel-utils.c  panel-utils.h  panel-xfconf.c  panel-xfconf.h
docs/: README.gtkrc-2.0
docs/references/: Makefile.am  libexpidus1panel-docs.xml  libexpidus1panel-sections.txt  libexpidus1panel.types
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
libexpidus1panel/: Makefile.am  abicheck.sh  expidus-arrow-button.c  expidus-arrow-button.h  expidus-panel-convenience.c  expidus-panel-convenience.h  expidus-panel-image.c  expidus-panel-image.h  expidus-panel-macros.h  expidus-panel-plugin-provider.c  expidus-panel-plugin-provider.h  expidus-panel-plugin.c  expidus-panel-plugin.h  libexpidus1panel-2.0.deps  libexpidus1panel-2.0.pc.in  libexpidus1panel-config.c  libexpidus1panel-config.h.in  libexpidus1panel-enums.h  libexpidus1panel.h  libexpidus1panel.symbols  make-libexpidus1panel-alias.pl
migrate/: Makefile.am  default.xml.in  main.c  migrate-config.c  migrate-config.h  migrate-default.c  migrate-default.h
panel/: Makefile.am  main.c  panel-application.c  panel-application.h  panel-base-window.c  panel-base-window.h  panel-dbus-client.c  panel-dbus-client.h  panel-dbus-service-infos.xml  panel-dbus-service.c  panel-dbus-service.h  panel-dialogs.c  panel-dialogs.h  panel-item-dialog.c  panel-item-dialog.h  panel-itembar.c  panel-itembar.h  panel-module-factory.c  panel-module-factory.h  panel-module.c  panel-module.h  panel-plugin-external-wrapper-infos.xml  panel-plugin-external-wrapper.c  panel-plugin-external-wrapper.h  panel-plugin-external.c  panel-plugin-external.h  panel-preferences-dialog.c  panel-preferences-dialog.glade  panel-preferences-dialog.h  panel-tic-tac-toe.c  panel-tic-tac-toe.h  panel-window.c  panel-window.h
plugins/: Makefile.am
plugins/actions/: Makefile.am  actions-dialog.glade  actions.c  actions.desktop.in.in  actions.h
plugins/applicationsmenu/: Makefile.am  applicationsmenu-dialog.glade  applicationsmenu.c  applicationsmenu.desktop.in.in  applicationsmenu.h  expidus1-popup-applicationsmenu.sh
plugins/clock/: Makefile.am  clock-analog.c  clock-analog.h  clock-binary.c  clock-binary.h  clock-dialog.glade  clock-digital.c  clock-digital.h  clock-fuzzy.c  clock-fuzzy.h  clock-lcd.c  clock-lcd.h  clock-time.c  clock-time.h  clock.c  clock.desktop.in.in  clock.h
plugins/directorymenu/: Makefile.am  directorymenu-dialog.glade  directorymenu.c  directorymenu.desktop.in.in  directorymenu.h  expidus1-popup-directorymenu.sh
plugins/expidusmenu/: Makefile.am  expidusmenu-dialog.glade  expidusmenu.c  expidusmenu.desktop.in.in  expidusmenu.h
plugins/launcher/: Makefile.am  launcher-dialog.c  launcher-dialog.glade  launcher-dialog.h  launcher.c  launcher.desktop.in.in  launcher.h
plugins/pager/: Makefile.am  pager-buttons.c  pager-buttons.h  pager-dialog.glade  pager.c  pager.desktop.in.in  pager.h
plugins/separator/: Makefile.am  separator-dialog.glade  separator.c  separator.desktop.in.in  separator.h
plugins/showdesktop/: Makefile.am  showdesktop.c  showdesktop.desktop.in.in  showdesktop.h
plugins/systray/: Makefile.am  sn-backend.c  sn-backend.h  sn-box.c  sn-box.h  sn-button.c  sn-button.h  sn-config.c  sn-config.h  sn-dialog.c  sn-dialog.glade  sn-dialog.h  sn-icon-box.c  sn-icon-box.h  sn-item.c  sn-item.h  sn-plugin.c  sn-plugin.h  sn-util.c  sn-util.h  statusnotifier.py  systray-box.c  systray-box.h  systray-manager.c  systray-manager.h  systray-socket.c  systray-socket.h  systray.c  systray.desktop.in.in  systray.h
plugins/tasklist/: Makefile.am  tasklist-dialog.glade  tasklist-widget.c  tasklist-widget.h  tasklist.c  tasklist.desktop.in.in
plugins/windowmenu/: Makefile.am  expidus1-popup-windowmenu.sh  windowmenu-dialog.glade  windowmenu.c  windowmenu.desktop.in.in  windowmenu.h
po/: POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  nn.po  (+23 more)
wrapper/: Makefile.am  main.c  wrapper-module.c  wrapper-module.h  wrapper-plug.c  wrapper-plug.h
