
iconsdir = $(datadir)/icons/hicolor/32x32/apps
icons_DATA = \
	com.expidus.panel.actions.png	\
	com.expidus.panel.applicationsmenu.png	\
	com.expidus.panel.directorymenu.png	\
	com.expidus.panel.clock.png	\
	com.expidus.panel.launcher.png	\
	com.expidus.panel.pager.png	\
	com.expidus.panel.png		\
	com.expidus.panel.separator.png	\
	com.expidus.panel.showdesktop.png	\
	com.expidus.panel.statustray.png	\
	com.expidus.panel.tasklist.png	\
	com.expidus.panel.windowmenu.png

EXTRA_DIST = \
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
